# ska-osd

./: .dockerignore  .flake8  .flaskenv  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .release  .tmaliases  CHANGELOG  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml  sonar-project.properties  test.py
.make/: .gitlab-ci.yml  .make-oci-support  .make-python-support  .make-release-support  docs.mk  helm.mk  k8s.mk  oci.mk  release.mk
.make/tests/resources/: pyproject.toml.default
.make/tests/unit/: 05_oci.bats
charts/ska-oso-osd/: Chart.yaml  values.yaml
charts/ska-oso-osd-umbrella/: Chart.yaml
charts/ska-oso-osd/templates/: _helpers.tpl  environment.yaml  rest.yaml
charts/ska-ost-osd/: Chart.yaml  values.yaml
charts/ska-ost-osd-umbrella/: Chart.yaml  values.yaml
charts/ska-ost-osd/templates/: _helpers.tpl  environment.yaml  rest.yaml  vault-static-secret.yaml
docs/: requirements.txt
docs/openapi/: export_openapi.py  openapi.json
docs/src/: CHANGELOG.rst  conf.py  index.rst
docs/src/api/: guide.rst  index.rst
osd_data/ska1_low/: low_capabilities.json
osd_data/ska1_mid/: mid_capabilities.json
src/ska_osd/osd/: constant.py  helper.py  osd.py
src/ska_osd/rest/: __init__.py  flask_osd.py  wsgi.py
src/ska_oso_osd/: __init__.py  wsgi.py
src/ska_oso_osd/osd/: constant.py  osd.py
src/ska_oso_osd/rest/: __init__.py  flask_osd.py  wsgi.py
src/ska_ost_osd/: __init__.py  app.py
src/ska_ost_osd/common/: constant.py  error_handling.py  models.py  utils.py
src/ska_ost_osd/models/: models.py  models_query.py
src/ska_ost_osd/osd/: __init__.py  constant.py  gitlab_helper.py  helper.py  new_data_backend.py  old_osd.py  osd.py  osd_schema_validator.py  osd_update_schema.py  osd_validation_messages.py  validation_messages.py  version_manager.py
src/ska_ost_osd/rest/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py
tests/unit/: test_gitlab_helper.py  test_osd.py  test_release_gitlab.py  test_resources.py  test_rest.py  test_semantic_validation.py  test_version_manager.py
tmdata/: .tmaliases  observatory_policies.json
tmdata/observatory/: observatory_policies.json
tmdata/ska1_low/: low_capabilities.json
tmdata/ska1_mid/: mid_capabilities.json
tmdata/subarray_templates/: subarray_template_library.json
tmdata/version_mapping/: cycle_gitlab_release_version_mapping.json  latest_release.txt
(+142 files in other folders)
