[tool.poetry]
name = "ska-oso-osd"
version = "0.0.1"
description = "simplest form OSD consists ofguration files that are required by OSO tools."
authors = ["Dayanand Arade <dayanand_arade@persistent.com>"]
license= "BSD-3-Clause"
readme = "README.md"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'
default = false
secondary = false

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "^3.10"
connexion = {extras = ["swagger-ui"], version = "^2.14.0"}
python-dateutil = "^2.8.2"
gunicorn = "^20.1.0"
ska-ser-logging = "^0.4.1"
requests = "^2.27.1"
prance = {version = "^23.6.21.0", extras = ["osv"]}
fire = "^0.5.0"
ska-ser-skuid = "^3.3.3"
# Pinning older version because of https://github.com/python-openapi/openapi-spec-validator/issues/201
jsonschema = "4.17.3"
ska-telmodel = "^1.13.0"
ska-ser-sphinx-theme = "^0.1.2"
sphinxcontrib-openapi= "^0.8.1"
myst-parser = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.8.2"
pytest = "^7.1.1"
pytest-bdd = "^4.1.0"
pytest-cov = "^3.0.0"
pytest-forked = "^1.4.0"
pytest-json-report = "^1.5.0"
black = "^23.12.1"
pycodestyle = "^2.8.0"
isort = "^5.10.1"
pylint-junit = "^0.3.2"
flake8 = "^7.0.0"
deepdiff = "^5.8.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinxcontrib-openapi= "^0.8.1"
myst-parser = "^1.0.0"
ska-ser-sphinx-theme = "^0.1.2"

[tool.coverage.run]
parallel = true
branch = true
data_file = ".coverage/.coverage"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
preview = true
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | src/ska_oso_osd/rest/openapi/__submodules__
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
skip = "src/ska_oso_osd/rest/openapi/__submodules__"

[tool.pylint]
disable = "C,R,W3101,W0511"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
